--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <video src="" controls class="result__video" poster=""></video>
         </div>
         <form class="search-form">
-          <fieldset class="search-form__fieldset">
+          <fieldset class="search-form__fieldset search-form-city">
             <h2 class="search-form__fieldset-title">Город</h2>
             <label class="search-form__label">
               <span class="search-form__label-text visually-hidden">Город</span>
@@ -30,7 +30,7 @@
             </label>
           </fieldset>
           <fieldset class="search-form__fieldset">
-            <h2 class="search-form__fieldset-title">Время суток</h2>
+            <h2 class="search-form__fieldset-title search-form-time">Время суток</h2>
             <div class="search-form__checkbox-list">
               <label class="search-form__label">
                 <input
